# phidata_starter_docker

./: .gitignore  README.md  airflow-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py
data/products/dau/: dau.py
data/products/sample_dag/: sample_dag.py
data/products/user_count/: user_count.py
data/workspace/: config.py
scripts/: format.sh  format_ws.sh  install.sh  install_ws.sh
workspace/: .gitignore  config.py
