[project]
name = "data"
version = "0.1.0"
requires-python = ">3.7"

dependencies = [
    "pandas",
    "phidata",
    "psycopg2-binary",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workspace"]

# Update this value if the workspace directory is renamed.
# [tool.phidata]
# workspace = "workspace"

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "airflow",
    "airflow.*",
    "phidata",
    "phidata.*",
    "pandas.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true
